Fixed spelling of Addon from Adon

--- a/Documentation/Addon/Addon_Info/Addon_Info.kv
+++ b/Documentation/Addon/Addon_Info/Addon_Info.kv
@@ -12,7 +12,7 @@
             }
             "Map"                       "default"
             "Respect_Party"             "True" // Optional to false
-            "Script_File"               "Adon.lua"
+            "Script_File"               "Addon.lua"
         }
     }
 }
