Added info about Integration to Twitch and Discord

--- a/Documentation/Addon/Addon_Info/Addon_Info.kv
+++ b/Documentation/Addon/Addon_Info/Addon_Info.kv
@@ -13,6 +13,8 @@
             "Map"                       "default"
             "Script_File"               "Addon_Unranked.lua"
             "Allowed_In_Debug"          "Yes"
+            "Twitch_Chat"               "Yes"
+            "Dedicated_Server"          "No"
         }
         "Ranked"
         {
@@ -25,6 +27,8 @@
             "Respect_Party"             "True"
             "Script_File"               "Addon_Ranked.lua"
             "Allowed_In_Debug"          "No"
+            "Twitch_Chat"               "No"
+            "Dedicated_Server"          "Require"
         }
         "Debug"
         {
@@ -36,6 +40,8 @@
             "Map"                       "test"
             "Script_File"               "Addon_Test.lua"
             "Allowed_In_Debug"          "Only"
+            "Twitch_Chat"               "No"
+            "Dedicated_Server"          "No"
         }
     }
 }
