--- a/Game/KeyValue/Ability/Hero/Sniper/Long_Barrel.kv
+++ b/Game/KeyValue/Ability/Hero/Sniper/Long_Barrel.kv
@@ -3,7 +3,13 @@
     "Long_Barrel"
     {
         "Script_File"                   "Ability/Hero/Sniper/Long_Barrel.lua"
-        "Max_Levels"                    "3"
+        "Max_Level"                     "3"
+        "Levels"
+        {
+            "1"                         "6"
+            "2"                         "12"
+            "3"                         "18"
+        }
 
         "Ability_Type"                  "Ultimate"
 
