--- a/Game/KeyValue/Ability/Hero/Sniper/Long_Barrel_AA.kv
+++ b/Game/KeyValue/Ability/Hero/Sniper/Long_Barrel_AA.kv
@@ -2,7 +2,15 @@
 {
     "Long_Barrel"
     {
-        "Max_Levels"                    "5"
+        "Max_Level"                     "5"
+        "Levels"
+        {
+            "1"                         "6"
+            "2"                         "12"
+            "3"                         "18"
+            "4"                         "40"
+            "5"                         "50"
+        }
 
         "Values"
         {
