--- a/Game/KeyValue/Ability/Hero/Sniper/Mark_AA.kv
+++ b/Game/KeyValue/Ability/Hero/Sniper/Mark_AA.kv
@@ -2,6 +2,17 @@
 {
     "Mark"
     {
+        "Max_Level"                     "6"
+        "Levels"
+        {
+            "1"                         "1"
+            "2"                         "3"
+            "3"                         "5"
+            "4"                         "7"
+            "5"                         "36"
+            "6"                         "41"
+        }
+
         "Values"
         {
             "Manacost"                  "50 60 70 80 90 100"
