--- a/Game/KeyValue/Ability/Hero/Sniper/Medical_Training.kv
+++ b/Game/KeyValue/Ability/Hero/Sniper/Medical_Training.kv
@@ -3,7 +3,14 @@
     "Medical_Training"
     {
         "Script_File"                   "Ability/Hero/Sniper/Medical_Training.lua"
-        "Max_Levels"                    "4"
+        "Max_Level"                     "4"
+        "Levels"
+        {
+            "1"                         "1"
+            "2"                         "3"
+            "3"                         "5"
+            "4"                         "7"
+        }
 
         "Ability_Type"                  "Normal"
         //TODO Active, AoE, Channel
