--- a/Game/KeyValue/Ability/Hero/Sniper/Military_Ammo_AA.kv
+++ b/Game/KeyValue/Ability/Hero/Sniper/Military_Ammo_AA.kv
@@ -1,6 +1,6 @@
 "Ability"
 {
-    "Medical_Training"
+    "Military_Ammo"
     {
         "Max_Level"                     "6"
         "Levels"
@@ -15,10 +15,7 @@
 
         "Values"
         {
-            "Manacost"                  "100 110 120 130 160 200"
-
-            "Heal_Percent"              "2 4 6 8 12 15"
-            "Heal_Min"                  "100 200 300 400 600 800"
+            "Bonus_Damage"              "10 25 40 60 100 150"
         }
     }
 }
