--- a/Game/Gui/Css/Minimap.css
+++ b/Game/Gui/Css/Minimap.css
@@ -1,11 +1,11 @@
-.minimap_icon {
+.Minimap_Icon {
 
 }
 
-.minimap_icon_hero {
+.Minimap_Icon_Hero {
 
 }
 
-.minimap_icon_boss {
+.Minimap_Icon_Boss {
 
 }
