--- a/Game/KeyValue/Ability/Hero/Mori/Other_Side.kv
+++ b/Game/KeyValue/Ability/Hero/Mori/Other_Side.kv
@@ -1,8 +1,8 @@
 "Ability"
 {
-    "Military_Ammo"
+    "Other_Side"
     {
-        "Script_File"                   "Ability/Hero/Sniper/Military_Ammo.lua"
+        "Script_File"                   "Ability/Hero/Mori/Other_Side.lua"
         "Max_Level"                     "6"
         "Levels"
         {
@@ -19,8 +19,10 @@
 
         "Values"
         {
-            "Manacost"                  "25"
-            "Bonus_Damage"              "10 25 35 60 100 160"
+            "Damage"                    "10 20 30 45 65 90"
+
+            "Range"                     "200"
+            "Manacost"                  "5 10 15 20 25 30"
         }
     }
 }
