--- a/Game/KeyValue/Ability/Hero/Mori/Presence_of_Death.kv
+++ b/Game/KeyValue/Ability/Hero/Mori/Presence_of_Death.kv
@@ -1,8 +1,8 @@
 "Ability"
 {
-    "Military_Ammo"
+    "Presence_of_Death"
     {
-        "Script_File"                   "Ability/Hero/Sniper/Military_Ammo.lua"
+        "Script_File"                   "Ability/Hero/Mori/Presence_of_Death.lua"
         "Max_Level"                     "6"
         "Levels"
         {
@@ -15,12 +15,15 @@
         }
 
         "Ability_Type"                  "Normal"
-        //TODO Toggle
 
         "Values"
         {
-            "Manacost"                  "25"
-            "Bonus_Damage"              "10 25 35 60 100 160"
+            "Damage"                    "0.5 1.0 1.5 2.0 2.8 3.8"
+
+            "Strength_Loss"             "1"
+            "Agility_Loss"              "0"
+            "Intelligence_Loss"         "1"
+            "Will_Loss"                 "0"
         }
     }
 }
