--- a/Game/KeyValue/Ability/Hero/Sniper/Long_Barrel.kv
+++ b/Game/KeyValue/Ability/Hero/Sniper/Long_Barrel.kv
@@ -3,21 +3,22 @@
     "Long_Barrel"
     {
         "Script_File"                   "Ability/Hero/Sniper/Long_Barrel.lua"
-        "Max_Level"                     "3"
+        "Max_Level"                     "4"
         "Levels"
         {
             "1"                         "6"
             "2"                         "12"
             "3"                         "18"
+            "4"                         "28"
         }
 
         "Ability_Type"                  "Ultimate"
 
         "Values"
         {
-            "Attack_Speed_Reduction"    "20 40 80"
-            "Attack_Range_Increase"     "200 300 600"
-            "Vision_Increase"           "200 300 600"
+            "Attack_Speed_Reduction"    "20 40 80 110"
+            "Attack_Range_Increase"     "150 250 400 600"
+            "Vision_Increase"           "150 250 400 600"
         }
     }
 }
