--- a/Game/KeyValue/Ability/Hero/Sniper/Mark.kv
+++ b/Game/KeyValue/Ability/Hero/Sniper/Mark.kv
@@ -3,13 +3,15 @@
     "Mark"
     {
         "Script_File"                   "Ability/Hero/Sniper/Mark.lua"
-        "Max_Level"                     "4"
+        "Max_Level"                     "6"
         "Levels"
         {
             "1"                         "1"
             "2"                         "3"
             "3"                         "5"
-            "4"                         "7"
+            "4"                         "9"
+            "5"                         "15"
+            "6"                         "23"
         }
 
         "Ability_Type"                  "Normal"
@@ -17,13 +19,13 @@
 
         "Values"
         {
-            "Manacost"                  "50 60 70 80"
-            "Cooldown"                  "30"
+            "Manacost"                  "50 60 70 80 90 100"
+            "Cooldown"                  "30 30 30 30 20 10"
 
             "Cast_Range"                "Global"
             "Cast_Point"                "0"
 
-            "Duration"                  "5 10 20 30"
+            "Duration"                  "5 10 15 20 30 45"
 
             "Vision_After_Hit_Duration" "0.8"
             "Vision_After_Hit_Range"    "0" // Only target
