--- a/Game/KeyValue/Ability/Hero/Sniper/Medical_Training.kv
+++ b/Game/KeyValue/Ability/Hero/Sniper/Medical_Training.kv
@@ -3,13 +3,15 @@
     "Medical_Training"
     {
         "Script_File"                   "Ability/Hero/Sniper/Medical_Training.lua"
-        "Max_Level"                     "4"
+        "Max_Level"                     "6"
         "Levels"
         {
             "1"                         "1"
             "2"                         "3"
             "3"                         "5"
-            "4"                         "7"
+            "4"                         "9"
+            "5"                         "15"
+            "6"                         "23"
         }
 
         "Ability_Type"                  "Normal"
@@ -17,15 +19,15 @@
 
         "Values"
         {
-            "Manacost"                  "120"
+            "Manacost"                  "100 110 120 130 160 200"
             "Cooldown"                  "45"
 
             "Cast_Point"                "0.2"
             "Cast_Radius"               "200"
             "Channel_Time"              "1.0"
 
-            "Heal_Percent"              "2.5 5.0 7.5 10.0"
-            "Heal_Min"                  "100 200 300 400"
+            "Heal_Percent"              "2 4 6 8 12 15"
+            "Heal_Min"                  "100 200 300 400 600 800"
         }
 
         "Precache"
