Added 1st tutorial! "First Ability"

--- a/Game/KeyValue/Ability/Hero/Mori/Presence_of_Death.kv
+++ b/Game/KeyValue/Ability/Hero/Mori/Presence_of_Death.kv
@@ -14,16 +14,11 @@
             "6"                         "23"
         }
 
-        "Ability_Type"                  "Normal"
+        "Max_Health_Damage"             "0.5 1.0 1.5 2.0 2.8 3.8"
 
-        "Values"
-        {
-            "Damage"                    "0.5 1.0 1.5 2.0 2.8 3.8"
-
-            "Strength_Loss"             "1"
-            "Agility_Loss"              "0"
-            "Intelligence_Loss"         "1"
-            "Will_Loss"                 "0"
-        }
+        "Strength_Loss"                 "1"
+        "Agility_Loss"                  "0"
+        "Intelligence_Loss"             "1"
+        "Will_Loss"                     "0"
     }
 }
