Attempt to implement Military Ammo of Sniper

--- a/Game/KeyValue/Ability/Hero/Sniper/Military_Ammo.kv
+++ b/Game/KeyValue/Ability/Hero/Sniper/Military_Ammo.kv
@@ -16,7 +16,7 @@
 
         //TODO Toggle
 
-        "Manacost"                  "25"
-        "Bonus_Damage"              "10 25 35 60 100 160"
+        "Manacost"                      "25"
+        "Damage"                        "10 25 35 60 100 160"
     }
 }
